# book-app

./: .flutter-plugins  .flutter-plugins-dependencies  .gitignore  .packages  2023-02-12_Backup_books.csv  Makefile  README.md  nativescript.config.ts  package-lock.json  package.json  pubspec.yaml
.dart_tool/: package_config.json  package_config_subset
.dart_tool/flutter_build/e3b248ca34f9f1da67f139b1143a05a6/: .filecache  debug_android_application.stamp  flutter_assets.d  kernel_snapshot.d  kernel_snapshot.stamp  outputs.json
.dart_tool/flutter_build/f1873651bae50d072d1be398c1af16f2/: .filecache  debug_bundle_windows_assets.stamp  flutter_assets.d  gen_dart_plugin_registrant.stamp  kernel_snapshot.d  kernel_snapshot.stamp  outputs.json  unpack_windows.stamp  windows_engine_sources.d
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/gradle/wrapper/: gradle-wrapper.properties
ios/Runner/: Info.plist
lib/: collectionPage.dart  main.dart  scannerPage.dart
postgresql/: books.sql
server/: api.py  crud.py  db.py  main.py  models.py  test_main.py
server_rs/src/: lib.rs  models.rs  schema.rs
server_rs_actix/: Cargo.toml
server_rs_actix/src/: main.rs
server_rs_salvo/: Cargo.toml
server_rs_salvo/src/: main.rs
test/: widget_test.dart
